# pathX

./: .gitmodules  CHelloWorldText.cpp  CMakeLists.txt  CTestCanvas.cpp  CTestCanvas.h  Core.cpp  Core.h  ImWindow.cpp  ImWindow.h  ImWindow.inl  README.md  WCanvas.h  WHelloWorld.cpp  WHelloWorld.h  imgui.ini  main.cpp  pathX.sln  pathX.vcxproj  pathX.vcxproj.filters
pathX/x64/Debug/: pathX.exe.recipe  vc143.idb
pathX/x64/Debug/pathX.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  pathX.lastbuildstate
pathX/x64/Release/pathX.tlog/: pathX.lastbuildstate
src/: CCanvas.cpp  CCanvas.h  CDelaunayCanvas.cpp  CDelaunayCanvas.h  CDelaunayDrawer.cpp  CDelaunayDrawer.h  CHelloWorldText.h  Component.h  CoreInitializer.h  ImGuiBuild.cpp  ImWindow.cpp  ImWindow.h  User.h  UserComponents.h  UserImWindows.h  WCanvas.cpp  WDelaunay.cpp  WDelaunay.h  WDelaunayTestbed.cpp  WDelaunayTestbed.h  imgui_utils.h  imvec2_utils.h  main.cpp  stdafx.h
unity/: .gitignore
unity/Assets/PathX/: egod1537.PathX.asmdef
unity/Assets/PathX/Visualizer/: ViewProbeJSON.cs  ViewProjectionCamera.cs  ViewStructure.cs
unity/Assets/PathX/Visualizer/Editor/: EditorViewProbeJSON.cs
unity/Assets/Scenes/: SampleScene.unity
unity/ProjectSettings/: ProjectSettings.asset
